# xisf-header

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: guide.md
docs/decisions/: 0001-header-editor-architecture-alignment.md
examples/: quickstart.rs
specs/001-xisf-header/: spec.md
src/: error.rs  header.rs  key.rs  keyword.rs  lib.rs  property.rs  reader.rs  splice.rs  value.rs  writer.rs
tests/: errors.rs  fixture.rs  formatting.rs  integration_xisf.rs  properties.rs  proptest_roundtrip.rs  roundtrip.rs  serde.rs
tests/common/: mod.rs
