[package]
name = "xisf-header"
version = "0.4.1"
edition = "2021"
rust-version = "1.82.0"
description = "Read and write XISF image-file headers: extract FITS keywords and CRUD the XISF header container. Header-only (never touches pixel data)."
authors = ["Sjors Robroek <s.robroek@vxsan.com>"]
license = "MPL-2.0"
repository = "https://github.com/nightwatch-astro/xisf-header"
documentation = "https://docs.rs/xisf-header"
readme = "README.md"
keywords = ["xisf", "fits", "astronomy", "header", "astrophotography"]
categories = ["parsing", "encoding", "science"]
publish = true

[dependencies]
quick-xml = "0.41"
serde = { version = "1.0.228", features = ["derive"], optional = true }
skymath = "0.6.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["parsing", "formatting"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
# Derive `serde::{Serialize, Deserialize}` on the public `Header`/`FitsKeyword` types.
serde = ["dep:serde", "time/serde"]

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.150"

[package.metadata.docs.rs]
all-features = true
